# promptlens

./: .gitignore  LICENSE  README.md  pyproject.toml  schema.json
dashboard/: index.html
examples/: sample-report.md
promptlens/: __init__.py  cli.py  intents.py  loops.py  parser.py  shapes.py  topics.py
