[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "promptlens"
version = "0.1.0"
description = "See how you actually use AI — topic patterns, conversation loops, prompt shapes, and usage DNA from your ChatGPT history."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[project.scripts]
promptlens = "promptlens.cli:main"
